# dreame-vacuum

./: .codespellrc  .pre-commit-config.yaml  CI_STATUS.md  CONTRIBUTING.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  README.md  hacs.json  info.md  install  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: hassfest.yaml  release.yaml  validate.yaml
custom_components/dreame_vacuum/: __init__.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  recorder.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py  vacuum.py
custom_components/dreame_vacuum/dreame/: __init__.py  const.py  device.py  map.py  miio_patch.py  protocol.py  resources.py  types.py
custom_components/dreame_vacuum/translations/: ca.json  cs.json  de.json  en.json  es.json  fr.json  hu.json  it.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ro.json  ru.json  sl.json  sv.json  uk.json  zh-Hans.json  zh-Hant.json
docs/: entities.md  events.md  map.md  room_entities.md  services.md  supported_devices.md
