[project]
name = "dreame-vacuum"
version = "2.2.12"
description = "Dreame Vacuum integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
# Increase line length to match Home Assistant standards
line-length = 120
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "LOG",    # flake8-logging
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "C901",   # Too complex
    "DTZ005", # Use of datetime.now() without timezone
    "DTZ006", # Use of datetime.fromtimestamp() without timezone
    "RET504", # Unnecessary variable assignment before return
    "SIM102", # Use a single if statement instead of nested if
    "SIM105", # Use contextlib.suppress instead of try-except-pass
    "UP007",  # Use X | Y for type annotations (not compatible with Python 3.9)
]

[tool.ruff.lint.mccabe]
# Maximum allowed complexity
max-complexity = 15

[tool.ruff.lint.isort]
# Home Assistant import order
force-sort-within-sections = true
known-first-party = ["custom_components.dreame_vacuum"]
combine-as-imports = true

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

[tool.codespell]
skip = "*.js,*.json,*.pyc"
ignore-words-list = "hass,HA"
