[project]
name = "dreame-vacuum"
version = "2.2.12"
description = "Dreame Vacuum integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
# Increase line length to match Home Assistant standards
line-length = 120
target-version = "py311"

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C90",    # mccabe complexity
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "LOG",    # flake8-logging
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E402",   # Module level import not at top (needed for miio_patch)
    "E501",   # Line too long (handled by formatter)
    "E711",   # Comparison to None (== None vs is None - lots to fix)
    "E712",   # Comparison to True/False (already mostly fixed)
    "E722",   # Bare except (many legitimate uses for robustness)
    "E741",   # Ambiguous variable name (many legitimate short names)
    "F403",   # Star imports (resources.py)
    "F405",   # Undefined from star imports (resources.py)
    "F507",   # %-format placeholder mismatch (to fix manually)
    "F634",   # If test is tuple (complex condition)
    "F841",   # Local variable assigned but never used
    "B006",   # Mutable default argument (lots to fix)
    "B007",   # Loop variable not used (common pattern)
    "B008",   # Do not perform function call in argument defaults
    "C901",   # Too complex
    "DTZ005", # Use of datetime.now() without timezone
    "DTZ006", # Use of datetime.fromtimestamp() without timezone
    "RET503", # Missing explicit return (many to fix)
    "RET504", # Unnecessary variable assignment before return
    "SIM101", # Multiple isinstance (style preference)
    "SIM102", # Use a single if statement instead of nested if
    "SIM103", # Return condition directly (style preference)
    "SIM105", # Use contextlib.suppress instead of try-except-pass
    "SIM108", # Ternary operator (style preference)
    "SIM109", # Multiple equality comparisons (style preference)
    "SIM118", # Use key in dict instead of key in dict.keys()
    "SIM210", # Use bool() instead of True if ... else False
    "SIM212", # if not x else y -> y if y else x (confusing)
    "SIM222", # Use True instead of ... or True (buggy detection)
    "SIM401", # dict.get instead of if/else (style preference)
    "C402",   # Unnecessary generator (dict comprehension)
    "UP007",  # Use X | Y for type annotations (not compatible with Python 3.9)
    "UP008",  # super() without arguments (style preference)
    "UP031",  # Use format specifiers instead of % format
    "RUF005", # Consider unpacking instead of concatenation
]

[tool.ruff.lint.mccabe]
# Maximum allowed complexity
max-complexity = 15

[tool.ruff.lint.isort]
# Home Assistant import order
force-sort-within-sections = true
known-first-party = ["custom_components.dreame_vacuum"]
combine-as-imports = true

[tool.ruff.format]
# Use double quotes
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

[tool.codespell]
skip = "*.js,*.json,*.pyc"
ignore-words-list = "hass,HA"
